After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750401 - Suppress errors if daemon part is missing
Suppress errors if daemon part is missing
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: client module
git master
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2015-06-04 15:01 UTC by Ondrej Holy
Modified: 2015-06-08 09:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
client: Suppress errors if daemon part is missing (2.41 KB, patch)
2015-06-04 15:02 UTC, Ondrej Holy
committed Details | Review

Description Ondrej Holy 2015-06-04 15:01:12 UTC
This follows up of Bug 750099 with changes needed for package split.

Following errors should be suppressed:

$ gvfs-mount -li
(gvfs-mount:8526): GVFS-WARNING **: cannot open directory /usr/share/gvfs/remote-volume-monitors: Error opening directory '/usr/share/gvfs/remote-volume-monitors': No such file or directory
org.gtk.vfs.MountTracker.listMountableInfo call failed: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name org.gtk.vfs.Daemon was not provided by any .service files (g-dbus-error-quark, 2)
Comment 1 Ondrej Holy 2015-06-04 15:02:36 UTC
Created attachment 304588 [details] [review]
client: Suppress errors if daemon part is missing

Return FALSE from vfs_is_active if there aren't any supported uri schemes (i.e. deamon part is missing). It will cause things to work just like if the gvfs client part was never installed.
Comment 2 Ross Lagerwall 2015-06-07 15:32:21 UTC
Review of attachment 304588 [details] [review]:

Looks good!
Comment 3 Alexander Larsson 2015-06-08 07:28:52 UTC
Review of attachment 304588 [details] [review]:

Lgtm
Comment 4 Ondrej Holy 2015-06-08 09:02:58 UTC
Comment on attachment 304588 [details] [review]
client: Suppress errors if daemon part is missing

Thanks for the reviews!

commit 44100b4a828577786062c27d9bfb34d7a5844fff