client: Suppress errors if daemon part is missing

We want to split gvfs package on client and daemon part due to app
sandboxing. Return FALSE from vfs_is_active if there aren't any
supported uri schemes (i.e. deamon part is missing). It will cause
things to work just like if the gvfs client part was never installed.

Replace some warnings/errors by g_debug to suppress errors when
registering gio modules and daemon part is missing.

https://bugzilla.gnome.org/show_bug.cgi?id=750401